// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Message Matches snapshot (desktop) 1`] = `
.c0 {
  background-color: #f5fdff;
  border: 1px solid #094C6C;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  width: 100%;
}

.c0 svg {
  color: #094C6C;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 {
  box-sizing: border-box;
  padding-left: var(--spacing-2x);
}

.c1 p {
  font-size: 0.875rem;
  line-height: 24px;
  margin: var(--spacing-1x) 0 0 0;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-bold);
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      Tips
    </span>
    <p>
      Test
    </p>
  </div>
</div>
`;

exports[`Inline Message Matches snapshot (mobile) 1`] = `
.c0 {
  background-color: #fdf6f7;
  border: 1px solid #A40C2E;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-3x) var(--spacing-2x);
  width: 100%;
}

.c0 svg {
  color: #A40C2E;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 {
  box-sizing: border-box;
  padding-left: var(--spacing-2x);
}

.c1 p {
  font-size: 1rem;
  line-height: 24px;
  margin: var(--spacing-2x) 0 0 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: var(--font-bold);
}

<div
  aria-live="assertive"
  className="c0"
>
  <svg
    color="currentColor"
    focusable={false}
    height="20"
    width="20"
  />
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      Error
    </span>
    <p>
      Test
    </p>
  </div>
</div>
`;
